cdk/ecs-cdk/ecs-anywhere/cdk.out/ecs-anywhere-vpc.template.json
{
  "Resources": {
    "mydcvpnvpcC99028A5": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/Resource"
      }
    },
    "mydcvpnvpcpublicSubnet1Subnet93B9609B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "AvailabilityZone": "eu-west-2a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1/Subnet"
      }
    },
    "mydcvpnvpcpublicSubnet1RouteTableF3E55623": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1/RouteTable"
      }
    },
    "mydcvpnvpcpublicSubnet1RouteTableAssociation43B2FC32": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "mydcvpnvpcpublicSubnet1RouteTableF3E55623"
        },
        "SubnetId": {
          "Ref": "mydcvpnvpcpublicSubnet1Subnet93B9609B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1/RouteTableAssociation"
      }
    },
    "mydcvpnvpcpublicSubnet1DefaultRoute59A2A63E": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "mydcvpnvpcpublicSubnet1RouteTableF3E55623"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "mydcvpnvpcIGW7CEDA408"
        }
      },
      "DependsOn": [
        "mydcvpnvpcVPCGWEF69010B"
      ],
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1/DefaultRoute"
      }
    },
    "mydcvpnvpcpublicSubnet1EIPEA3A7CD0": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1/EIP"
      }
    },
    "mydcvpnvpcpublicSubnet1NATGateway6E86F45F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "mydcvpnvpcpublicSubnet1EIPEA3A7CD0",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "mydcvpnvpcpublicSubnet1Subnet93B9609B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet1/NATGateway"
      }
    },
    "mydcvpnvpcpublicSubnet2Subnet252458EC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "AvailabilityZone": "eu-west-2b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet2/Subnet"
      }
    },
    "mydcvpnvpcpublicSubnet2RouteTable62CE3964": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet2/RouteTable"
      }
    },
    "mydcvpnvpcpublicSubnet2RouteTableAssociation16A1E01B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "mydcvpnvpcpublicSubnet2RouteTable62CE3964"
        },
        "SubnetId": {
          "Ref": "mydcvpnvpcpublicSubnet2Subnet252458EC"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet2/RouteTableAssociation"
      }
    },
    "mydcvpnvpcpublicSubnet2DefaultRouteFA8DAB22": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "mydcvpnvpcpublicSubnet2RouteTable62CE3964"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "mydcvpnvpcIGW7CEDA408"
        }
      },
      "DependsOn": [
        "mydcvpnvpcVPCGWEF69010B"
      ],
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/publicSubnet2/DefaultRoute"
      }
    },
    "mydcvpnvpcprivateSubnet1Subnet90744793": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "AvailabilityZone": "eu-west-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet1/Subnet"
      }
    },
    "mydcvpnvpcprivateSubnet1RouteTableB9CE721C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet1/RouteTable"
      }
    },
    "mydcvpnvpcprivateSubnet1RouteTableAssociation149BFCB3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "mydcvpnvpcprivateSubnet1RouteTableB9CE721C"
        },
        "SubnetId": {
          "Ref": "mydcvpnvpcprivateSubnet1Subnet90744793"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet1/RouteTableAssociation"
      }
    },
    "mydcvpnvpcprivateSubnet1DefaultRoute6D05A927": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "mydcvpnvpcprivateSubnet1RouteTableB9CE721C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "mydcvpnvpcpublicSubnet1NATGateway6E86F45F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet1/DefaultRoute"
      }
    },
    "mydcvpnvpcprivateSubnet2Subnet2F863D55": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "AvailabilityZone": "eu-west-2b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet2/Subnet"
      }
    },
    "mydcvpnvpcprivateSubnet2RouteTableE4DB4BD2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet2/RouteTable"
      }
    },
    "mydcvpnvpcprivateSubnet2RouteTableAssociationA0EC00F0": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "mydcvpnvpcprivateSubnet2RouteTableE4DB4BD2"
        },
        "SubnetId": {
          "Ref": "mydcvpnvpcprivateSubnet2Subnet2F863D55"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet2/RouteTableAssociation"
      }
    },
    "mydcvpnvpcprivateSubnet2DefaultRoute4754DC58": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "mydcvpnvpcprivateSubnet2RouteTableE4DB4BD2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "mydcvpnvpcpublicSubnet1NATGateway6E86F45F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/privateSubnet2/DefaultRoute"
      }
    },
    "mydcvpnvpcIGW7CEDA408": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-anywhere-vpc/mydc-vpn-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/IGW"
      }
    },
    "mydcvpnvpcVPCGWEF69010B": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "mydcvpnvpcC99028A5"
        },
        "InternetGatewayId": {
          "Ref": "mydcvpnvpcIGW7CEDA408"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/mydc-vpn-vpc/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/02PTw+CMAzFP4v3OQVj9KghxnjRBY33UWuYwGa2TkII313mPzy9X19fmzbibRQv+HS0krUbw6WYgLHI2yNJKFiKzngLyJKrPni6e2KJ0Y6sBwret9+xaDr7XxIUIebt+Q4heBYJEz4rFRx9pvE1PFBqPOFJZiUO/uCtnTOgJCmjf+EAm50Ispe0lYS1bJiw6tHjsHinCW3P38D7kk+1pv7HvEJNXcdEQ7nRkxlf8vno5pQaW69JVcjTtz4BWG7LUykBAAA="
      },
      "Metadata": {
        "aws:cdk:path": "ecs-anywhere-vpc/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "VPCId": {
      "Description": "VPC ID",
      "Value": {
        "Ref": "mydcvpnvpcC99028A5"
      },
      "Export": {
        "Name": "eu-west-2:704533066374:ecs-anywhere-vpc:vpc-id"
      }
    },
    "ExportsOutputRefmydcvpnvpcC99028A5E0C4BB86": {
      "Value": {
        "Ref": "mydcvpnvpcC99028A5"
      },
      "Export": {
        "Name": "ecs-anywhere-vpc:ExportsOutputRefmydcvpnvpcC99028A5E0C4BB86"
      }
    },
    "ExportsOutputRefmydcvpnvpcprivateSubnet1Subnet907447937118DADD": {
      "Value": {
        "Ref": "mydcvpnvpcprivateSubnet1Subnet90744793"
      },
      "Export": {
        "Name": "ecs-anywhere-vpc:ExportsOutputRefmydcvpnvpcprivateSubnet1Subnet907447937118DADD"
      }
    },
    "ExportsOutputRefmydcvpnvpcprivateSubnet2Subnet2F863D5508703380": {
      "Value": {
        "Ref": "mydcvpnvpcprivateSubnet2Subnet2F863D55"
      },
      "Export": {
        "Name": "ecs-anywhere-vpc:ExportsOutputRefmydcvpnvpcprivateSubnet2Subnet2F863D5508703380"
      }
    }
  }
}
